force-app/main/default/objects/smagicinteract__Conversation_Assignment__mdt/smagicinteract__Conversation_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>Conversation meeting criteria will be assigned to which sender.</description>
    <label>Conversation Assignment</label>
    <pluralLabel>Conversation Assignments</pluralLabel>
</CustomObject>