force-app/main/default/objects/smagicinteract__Conversation_Assignment__mdt/fields/smagicinteract__Assign_to__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Assign_to__c</fullName>
    <description>It will store assignment senders. 
Eg- Specific User, queue</description>
    <inlineHelpText>It will store assignment senders. 
Eg- Specific User, queue</inlineHelpText>
    <label>Assign to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DefaultOwner</fullName>
                <label>Default Setting</label>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>RecordOwner</fullName>
                <label>Record Owner</label>
            </value>
            <value>
                <fullName>SenderIdOwner</fullName>
                <label>SenderId Owner</label>
            </value>
            <value>
                <fullName>SpecificUser</fullName>
                <label>Specific User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>