force-app/main/default/objects/smagicinteract__Conversation_Assignment__mdt/fields/smagicinteract__Assign_to_value__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Assign_to_value__c</fullName>
    <description>It will store value of Assign to field in case of specific user or queue, etc.</description>
    <inlineHelpText>It will store value of Assign to field in case of specific user or queue, etc.</inlineHelpText>
    <label>Assign to value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>