force-app/main/default/objects/smagicinteract__Conversation_Assignment__mdt/fields/smagicinteract__Creation_Event__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Creation_Event__c</fullName>
    <description>It will store info about when conversation should be assigned to someone. Eg- Both Incoming and Outgoing, Incoming, Outgoing</description>
    <inlineHelpText>It will store info about when conversation should be assigned to someone. Eg- Both Incoming and Outgoing, Incoming, Outgoing</inlineHelpText>
    <label>Creation Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
            <value>
                <fullName>Incoming</fullName>
            </value>
            <value>
                <fullName>Outgoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>