force-app/main/default/objects/smagicinteract__Conversation_Assignment__mdt/fields/smagicinteract__Routing_Rule__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Routing_Rule__c</fullName>
    <description>It will store value of Assign to field in case of specific user or queue, etc.</description>
    <inlineHelpText>It will store value of Assign to field in case of specific user or queue, etc.</inlineHelpText>
    <label>Routing Rule</label>
    <referenceTo>smagicinteract__Routing_Rule__mdt</referenceTo>
    <relationshipLabel>Conversation Assignments</relationshipLabel>
    <relationshipName>Conversation_Assignments</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>